Refactor deployment utility and extended AWS remote client

--- a/benchmarks/experiments/wrapper_overhead/setup.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/setup.ipynb
@@ -16,12 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "from benchmarks.experiments.wrapper_overhead.common.deployment_utility import WrapperOverheadDeploymentUtility\n",
     "from benchmarks.experiments.wrapper_overhead.common.file_utility import FileUtility\n",
+    "from benchmarks.experiments.wrapper_overhead.common.extended_aws_remote_client import ExtendedAWSRemoteClient\n",
+    "from multi_x_serverless.deployment.common.deploy.models.resource import Resource\n",
+    "\n",
     "\n",
     "import os\n",
     "import yaml"
@@ -36,19 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "region = 'us-east-2'\n",
     "\n",
+    "runtime = \"python3.8\"\n",
+    "region = 'us-east-2'\n",
+    "client: ExtendedAWSRemoteClient = ExtendedAWSRemoteClient(region)\n",
     "deployment_utility: WrapperOverheadDeploymentUtility = WrapperOverheadDeploymentUtility(region)\n",
     "file_utility: FileUtility = FileUtility()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -56,14 +61,19 @@
      "output_type": "stream",
      "text": [
       "Experiment type: boto3_direct\n",
-      "{'function_name': 'wo-dna_vis-ed-direct-visualize', 'iam_policy_file': 'iam_policy.json', 'handler': 'app.visualize', 'configs': {'timeout': 300, 'memory': 512}}\n",
-      "{'aws': {'Version': '2012-10-17', 'Statement': [{'Action': ['logs:CreateLogGroup', 'logs:CreateLogStream', 'logs:PutLogEvents'], 'Resource': 'arn:aws:logs:*:*:*', 'Effect': 'Allow'}, {'Action': ['dynamodb:GetItem', 'dynamodb:UpdateItem'], 'Resource': 'arn:aws:dynamodb:*:*:*', 'Effect': 'Allow'}, {'Action': ['s3:GetObject', 's3:PutObject'], 'Resource': 'arn:aws:s3:::multi-x-serverless-image-processing-benchmark/*', 'Effect': 'Allow'}]}}\n",
-      "{'function_name': 'wo-dna_vis-ed-direct-get_input', 'iam_policy_file': 'iam_policy.json', 'handler': 'app.get_input', 'configs': {'timeout': 300, 'memory': 512}}\n",
-      "{'aws': {'Version': '2012-10-17', 'Statement': [{'Action': ['logs:CreateLogGroup', 'logs:CreateLogStream', 'logs:PutLogEvents'], 'Resource': 'arn:aws:logs:*:*:*', 'Effect': 'Allow'}, {'Action': ['lambda:InvokeFunction'], 'Resource': '*', 'Effect': 'Allow'}]}}\n"
+      "{'requirement.txt': './dna_visualization/external_database/boto3_only_direct_calls/visualize/requirement.txt', 'app.py': './dna_visualization/external_database/boto3_only_direct_calls/visualize/app.py'}\n",
+      "App file path: ./dna_visualization/external_database/boto3_only_direct_calls/visualize/app.py\n",
+      "Requirements file path: ./dna_visualization/external_database/boto3_only_direct_calls/visualize/requirement.txt\n",
+      "{'requirement.txt': './dna_visualization/external_database/boto3_only_direct_calls/get_input/requirement.txt', 'app.py': './dna_visualization/external_database/boto3_only_direct_calls/get_input/app.py'}\n",
+      "App file path: ./dna_visualization/external_database/boto3_only_direct_calls/get_input/app.py\n",
+      "Requirements file path: ./dna_visualization/external_database/boto3_only_direct_calls/get_input/requirement.txt\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "dna_vis_direct_calls_dir = './dna_visualization/external_database/boto3_only_direct_calls' # Boto3 only direct calls\n",
     "\n",
     "files_dict, directories_dict = file_utility.get_files_and_directories(dna_vis_direct_calls_dir)\n",
@@ -79,6 +89,9 @@
     "    # Those are the lambda functions that need to be deployed\n",
     "    for folder_path in directories_dict.values():\n",
     "        inner_files_dict, inner_directories_dict = file_utility.get_files_and_directories(folder_path)\n",
+    "\n",
+    "        require_sns = False\n",
+    "        # print(inner_files_dict)\n",
     "        # Step 2: For each folder, access the config to get the configuration\n",
     "        # (this may also determine if sns is used) and iam policies files\n",
     "        config_content = {}\n",
@@ -89,27 +102,86 @@
     "            # Load the config file\n",
     "            if 'config.yml' in config_files_dict:\n",
     "                config_content = file_utility.load_yaml_file(config_files_dict['config.yml'])\n",
-    "                print(config_content)\n",
+    "                # print(config_content)\n",
     "            else:\n",
     "                raise ValueError('config.yml not found in the configs directory')\n",
     "            \n",
     "            # Load the iam policies file\n",
     "            if 'iam_policy.json' in config_files_dict:\n",
     "                iam_policies_content = file_utility.load_yaml_file(config_files_dict['iam_policy.json'])\n",
-    "                print(iam_policies_content)\n",
+    "                # print(iam_policies_content)\n",
     "            else:\n",
     "                raise ValueError('iam_policy.json not found in the configs directory')\n",
-    "            \n",
-    "\n",
-    "\n",
-    "\n",
     "        else:\n",
     "            raise ValueError('configs directory not found')\n",
     "        \n",
-    "        # print(inner_files_dict, inner_directories_dict)\n",
+    "        # Lets get the path to the app.py and requirements.txt\n",
+    "        app_file_path = None\n",
+    "        requirements_file_path = None\n",
+    "        if 'app.py' in inner_files_dict:\n",
+    "            app_file_path = inner_files_dict['app.py']\n",
+    "        else:\n",
+    "            raise ValueError('app.py not found in the directory')\n",
     "        \n",
-    "    # Step 3: Check if the lambda function and sns topic exists\n",
-    "    # If it does, delete the old lambda function and sns topic\n",
+    "        if 'requirement.txt' in inner_files_dict:\n",
+    "            requirements_file_path = inner_files_dict['requirement.txt']\n",
+    "        else:\n",
+    "            raise ValueError('requirement.txt not found in the directory')\n",
+    "        \n",
+    "        # print(f'App file path: {app_file_path}')\n",
+    "        # print(f'Requirements file path: {requirements_file_path}')\n",
+    "\n",
+    "        # At this point we have both a valid config and iam policy file\n",
+    "        # We can now deploy the lambda function\n",
+    "        function_name = config_content['function_name']\n",
+    "        iam_policy_name = f'{function_name}-policy'\n",
+    "\n",
+    "        # print(f'Function name: {function_name}')\n",
+    "        # print(f'IAM Policy name: {iam_policy_name}')\n",
+    "        # print(f'Image name: {image_name}')\n",
+    "\n",
+    "        # # Check if function and iam policy exists\n",
+    "        # # If it does, delete the old function and iam policy\n",
+    "        # if client.resource_exists(Resource(function_name, \"function\")):\n",
+    "        #     print(f'Deleting old lambda function: {function_name}')\n",
+    "        #     client.remove_function(function_name)\n",
+    "        # if client.resource_exists(Resource(iam_policy_name, \"iam_role\")):\n",
+    "        #     print(f'Deleting old IAM policy: {iam_policy_name}')\n",
+    "        #     client.remove_role(iam_policy_name)\n",
+    "\n",
+    "        # Create new lambda function\n",
+    "        timeout = config_content['configs']['timeout']\n",
+    "        memory = config_content['configs']['memory']\n",
+    "        handler = config_content['handler']\n",
+    "        runtime = \"python3.8\"\n",
+    "\n",
+    "        # app_file_path -> path to the app.py\n",
+    "        # requirements_file_path -> path to the requirements.txt\n",
+    "\n",
+    "        # # Create the new function and iam policy\n",
+    "        # print(f'Creating new lambda function: {function_name}')\n",
+    "        # client.create_function(function_name, config_content['handler'], config_content['runtime'], config_content['role'], config_content['zip_file'])\n",
+    "        # print(f'Creating new IAM policy: {iam_policy_name}')\n",
+    "        # client.create_role(iam_policy_name, iam_policies_content['policy_document'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        # if require_sns:\n",
+    "        #     sns_topic_name = f'{function_name}-sns_topic'\n",
+    "        #     # sns_topic_arn = deployment_utility.create_sns_topic(sns_topic_name)\n",
+    "        #     # print(f'SNS Topic ARN: {sns_topic_arn}')\n",
+    "        #     # deployment_utility.subscribe_lambda_to_sns_topic(function_name, sns_topic_arn)\n",
+    "        \n",
+    "\n",
+    "        # # Step 3: Check if the lambda function and sns topic exists\n",
+    "        # # If it does, delete the old lambda function and sns topic\n",
+    "\n",
+    "\n",
+    "\n",
+    "        # # print(inner_files_dict, inner_directories_dict)\n",
+    "        \n",
+    "\n",
     "\n",
     "    # Step 4: Create a zip file of the contents of the code and the requirements\n",
     "    \n",
