--- a/benchmarks/experiments/wrapper_overhead/setup.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/setup.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,21 +39,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "from unittest.mock import MagicMock\n",
+    "from multi_x_serverless.deployment.common.deploy.deployment_packager import DeploymentPackager\n",
+    "\n",
+    "\n",
     "runtime = \"python3.8\"\n",
     "region = 'us-east-2'\n",
     "client: ExtendedAWSRemoteClient = ExtendedAWSRemoteClient(region)\n",
+    "file_utility: FileUtility = FileUtility()\n",
+    "\n",
     "deployment_utility: WrapperOverheadDeploymentUtility = WrapperOverheadDeploymentUtility(region)\n",
-    "file_utility: FileUtility = FileUtility()"
+    "config: MagicMock = MagicMock()\n",
+    "deployment_packager: DeploymentPackager = DeploymentPackager(config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'config.yml': './dna_visualization/external_database/boto3_only_direct_calls/config.yml'} {'visualize': './dna_visualization/external_database/boto3_only_direct_calls/visualize', 'get_input': './dna_visualization/external_database/boto3_only_direct_calls/get_input'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'boto3_direct',\n",
+       " 'workload_name': 'workflow-wo-dna_vis-ed-direct',\n",
+       " 'starting_function_name': 'wo-dna_vis-ed-direct-get_input',\n",
+       " 'functions': {'wo-dna_vis-ed-direct-visualize': {'function_name': 'wo-dna_vis-ed-direct-visualize',\n",
+       "   'iam_policy_name': 'wo-dna_vis-ed-direct-visualize-policy',\n",
+       "   'sns_topic_name': 'wo-dna_vis-ed-direct-visualize-sns_topic',\n",
+       "   'timeout': 300,\n",
+       "   'memory': 512,\n",
+       "   'handler': 'app.visualize',\n",
+       "   'data_directory_path': './dna_visualization/external_database/boto3_only_direct_calls/visualize',\n",
+       "   'iam_policies_content': '{\\n  \"Version\": \"2012-10-17\",\\n  \"Statement\": [\\n    {\\n      \"Action\": [\\n        \"logs:CreateLogGroup\",\\n        \"logs:CreateLogStream\",\\n        \"logs:PutLogEvents\"\\n      ],\\n      \"Resource\": \"arn:aws:logs:*:*:*\",\\n      \"Effect\": \"Allow\"\\n    },\\n    {\\n      \"Action\": [\"dynamodb:GetItem\", \"dynamodb:UpdateItem\"],\\n      \"Resource\": \"arn:aws:dynamodb:*:*:*\",\\n      \"Effect\": \"Allow\"\\n    },\\n    {\\n      \"Action\": [\"s3:GetObject\", \"s3:PutObject\"],\\n      \"Resource\": \"arn:aws:s3:::multi-x-serverless-image-processing-benchmark/*\",\\n      \"Effect\": \"Allow\"\\n    }\\n  ]\\n}\\n',\n",
+       "   'additional_docker_commands': None},\n",
+       "  'wo-dna_vis-ed-direct-get_input': {'function_name': 'wo-dna_vis-ed-direct-get_input',\n",
+       "   'iam_policy_name': 'wo-dna_vis-ed-direct-get_input-policy',\n",
+       "   'sns_topic_name': 'wo-dna_vis-ed-direct-get_input-sns_topic',\n",
+       "   'timeout': 300,\n",
+       "   'memory': 512,\n",
+       "   'handler': 'app.get_input',\n",
+       "   'data_directory_path': './dna_visualization/external_database/boto3_only_direct_calls/get_input',\n",
+       "   'iam_policies_content': '{\\n  \"aws\": {\\n    \"Version\": \"2012-10-17\",\\n    \"Statement\": [\\n      {\\n        \"Action\": [\\n          \"logs:CreateLogGroup\",\\n          \"logs:CreateLogStream\",\\n          \"logs:PutLogEvents\"\\n        ],\\n        \"Resource\": \"arn:aws:logs:*:*:*\",\\n        \"Effect\": \"Allow\"\\n      },\\n      {\\n        \"Action\": [\"lambda:InvokeFunction\"],\\n        \"Resource\": \"*\",\\n        \"Effect\": \"Allow\"\\n      }\\n    ]\\n  }\\n}\\n',\n",
+       "   'additional_docker_commands': None}}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dna_vis_direct_calls_dir = './dna_visualization/external_database/boto3_only_direct_calls' # Boto3 only direct calls\n",
+    "\n",
+    "config = file_utility.get_config(dna_vis_direct_calls_dir)\n",
+    "\n",
+    "config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'config.yml': './dna_visualization/external_database/boto3_only_direct_calls/config.yml'} {'visualize': './dna_visualization/external_database/boto3_only_direct_calls/visualize', 'get_input': './dna_visualization/external_database/boto3_only_direct_calls/get_input'}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'experiment_type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m dna_vis_direct_calls_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./dna_visualization/external_database/boto3_only_direct_calls\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;66;03m# Boto3 only direct calls\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mdeployment_utility\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeploy_experiment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdna_vis_direct_calls_dir\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/multi-x-serverless/benchmarks/experiments/wrapper_overhead/common/deployment_utility.py:27\u001b[0m, in \u001b[0;36mWrapperOverheadDeploymentUtility.deploy_experiment\u001b[0;34m(self, directory_path)\u001b[0m\n\u001b[1;32m     24\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_file_utility\u001b[38;5;241m.\u001b[39mget_config(directory_path)\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m config \u001b[38;5;241m!=\u001b[39m {}:\n\u001b[0;32m---> 27\u001b[0m     experiment_type \u001b[38;5;241m=\u001b[39m \u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mexperiment_type\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m experiment_type \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mboto3_direct\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m experiment_type \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mboto3_sns\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_deploy_lambda_functions(config)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'experiment_type'"
+     ]
+    }
+   ],
+   "source": [
+    "dna_vis_direct_calls_dir = './dna_visualization/external_database/boto3_only_direct_calls' # Boto3 only direct calls\n",
+    "\n",
+    "deployment_utility.deploy_experiment(dna_vis_direct_calls_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'experiment_type': 'boto3_direct',\n",
+       " 'functions': {'wo-dna_vis-ed-direct-visualize': {'function_name': 'wo-dna_vis-ed-direct-visualize',\n",
+       "   'iam_policy_name': 'wo-dna_vis-ed-direct-visualize-policy',\n",
+       "   'sns_topic_name': 'wo-dna_vis-ed-direct-visualize-sns_topic',\n",
+       "   'timeout': 300,\n",
+       "   'memory': 512,\n",
+       "   'handler': 'app.visualize',\n",
+       "   'runtime': 'python3.8',\n",
+       "   'data_directory_path': './dna_visualization/external_database/boto3_only_direct_calls/visualize',\n",
+       "   'iam_policies_content': '{\\n  \"Version\": \"2012-10-17\",\\n  \"Statement\": [\\n    {\\n      \"Action\": [\\n        \"logs:CreateLogGroup\",\\n        \"logs:CreateLogStream\",\\n        \"logs:PutLogEvents\"\\n      ],\\n      \"Resource\": \"arn:aws:logs:*:*:*\",\\n      \"Effect\": \"Allow\"\\n    },\\n    {\\n      \"Action\": [\"dynamodb:GetItem\", \"dynamodb:UpdateItem\"],\\n      \"Resource\": \"arn:aws:dynamodb:*:*:*\",\\n      \"Effect\": \"Allow\"\\n    },\\n    {\\n      \"Action\": [\"s3:GetObject\", \"s3:PutObject\"],\\n      \"Resource\": \"arn:aws:s3:::multi-x-serverless-image-processing-benchmark/*\",\\n      \"Effect\": \"Allow\"\\n    }\\n  ]\\n}\\n',\n",
+       "   'additional_docker_commands': ['yum update -y',\n",
+       "    'yum install -y tar gzip',\n",
+       "    'yum install -y xz',\n",
+       "    'curl https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz > /tmp/ffmpeg-release.tar.xz',\n",
+       "    'tar xvf /tmp/ffmpeg-release.tar.xz -C /opt',\n",
+       "    'mv /opt/ffmpeg-* /opt/ffmpeg',\n",
+       "    'cd /opt/ffmpeg',\n",
+       "    'mv model /usr/local/share',\n",
+       "    'mv ffmpeg ffprobe qt-faststart /usr/local/bin',\n",
+       "    'rm /tmp/ffmpeg-release.tar.xz']},\n",
+       "  'wo-dna_vis-ed-direct-get_input': {'function_name': 'wo-dna_vis-ed-direct-get_input',\n",
+       "   'iam_policy_name': 'wo-dna_vis-ed-direct-get_input-policy',\n",
+       "   'sns_topic_name': 'wo-dna_vis-ed-direct-get_input-sns_topic',\n",
+       "   'timeout': 300,\n",
+       "   'memory': 512,\n",
+       "   'handler': 'app.get_input',\n",
+       "   'runtime': 'python3.8',\n",
+       "   'data_directory_path': './dna_visualization/external_database/boto3_only_direct_calls/get_input',\n",
+       "   'iam_policies_content': '{\\n  \"aws\": {\\n    \"Version\": \"2012-10-17\",\\n    \"Statement\": [\\n      {\\n        \"Action\": [\\n          \"logs:CreateLogGroup\",\\n          \"logs:CreateLogStream\",\\n          \"logs:PutLogEvents\"\\n        ],\\n        \"Resource\": \"arn:aws:logs:*:*:*\",\\n        \"Effect\": \"Allow\"\\n      },\\n      {\\n        \"Action\": [\"lambda:InvokeFunction\"],\\n        \"Resource\": \"*\",\\n        \"Effect\": \"Allow\"\\n      }\\n    ]\\n  }\\n}\\n',\n",
+       "   'additional_docker_commands': None}}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -61,16 +197,16 @@
      "output_type": "stream",
      "text": [
       "Experiment type: boto3_direct\n",
-      "{'requirement.txt': './dna_visualization/external_database/boto3_only_direct_calls/visualize/requirement.txt', 'app.py': './dna_visualization/external_database/boto3_only_direct_calls/visualize/app.py'}\n",
-      "App file path: ./dna_visualization/external_database/boto3_only_direct_calls/visualize/app.py\n",
-      "Requirements file path: ./dna_visualization/external_database/boto3_only_direct_calls/visualize/requirement.txt\n",
-      "{'requirement.txt': './dna_visualization/external_database/boto3_only_direct_calls/get_input/requirement.txt', 'app.py': './dna_visualization/external_database/boto3_only_direct_calls/get_input/app.py'}\n",
-      "App file path: ./dna_visualization/external_database/boto3_only_direct_calls/get_input/app.py\n",
-      "Requirements file path: ./dna_visualization/external_database/boto3_only_direct_calls/get_input/requirement.txt\n"
+      "Zip path: ./dna_visualization/external_database/boto3_only_direct_calls/visualize/.multi-x-serverless/deployment-packages/267ccfcd05a141cb69c11c21e335a329f1e10af416dea5bf5e572b345e417872-python3.8-wo-dna_vis-ed-direct-visualize-1.0.0.zip\n",
+      "SNS Topic ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct-visualize-sns_topic\n",
+      "Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct-visualize-sns_topic:a876c935-0927-4974-9ba9-8631ae7d8079\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "import json\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -123,10 +259,10 @@
     "        else:\n",
     "            raise ValueError('app.py not found in the directory')\n",
     "        \n",
-    "        if 'requirement.txt' in inner_files_dict:\n",
-    "            requirements_file_path = inner_files_dict['requirement.txt']\n",
+    "        if 'requirements.txt' in inner_files_dict:\n",
+    "            requirements_file_path = inner_files_dict['requirements.txt']\n",
     "        else:\n",
-    "            raise ValueError('requirement.txt not found in the directory')\n",
+    "            raise ValueError('requirements.txt not found in the directory')\n",
     "        \n",
     "        # print(f'App file path: {app_file_path}')\n",
     "        # print(f'Requirements file path: {requirements_file_path}')\n",
@@ -154,9 +290,79 @@
     "        memory = config_content['configs']['memory']\n",
     "        handler = config_content['handler']\n",
     "        runtime = \"python3.8\"\n",
+    "        app_file_path # -> path to the app.py\n",
+    "        requirements_file_path # -> path to the requirements.txt\n",
     "\n",
-    "        # app_file_path -> path to the app.py\n",
-    "        # requirements_file_path -> path to the requirements.txt\n",
+    "\n",
+    "        # First lets print all the variables\n",
+    "        # print(f'Function name: {function_name}')\n",
+    "        # print(f'IAM Policy name: {iam_policy_name}')\n",
+    "        # print(f'Handler: {handler}')\n",
+    "        # print(f'Runtime: {runtime}')\n",
+    "        # print(f'App file path: {app_file_path}')\n",
+    "        # print(f'Requirements file path: {requirements_file_path}')\n",
+    "        # print(f'Timeout: {timeout}')\n",
+    "        # print(f'Memory: {memory}')\n",
+    "\n",
+    "        # policy_arn = client.create_role(iam_policy_name, json.dumps(iam_policies_content), lambda_trust_policy)\n",
+    "        # print(f'Policy ARN: {policy_arn}')\n",
+    "        # break \n",
+    "        policy_arn = \"arn:aws:iam::485595969306:role/wo-dna_vis-ed-direct-visualize-policy\"\n",
+    "\n",
+    "        # Experiment type: boto3_direct\n",
+    "        # Function name: wo-dna_vis-ed-direct-visualize\n",
+    "        # IAM Policy name: wo-dna_vis-ed-direct-visualize-policy\n",
+    "        # Handler: app.visualize\n",
+    "        # Runtime: python3.8\n",
+    "        # App file path: ./dna_visualization/external_database/boto3_only_direct_calls/visualize/app.py\n",
+    "        # Requirements file path: ./dna_visualization/external_database/boto3_only_direct_calls/visualize/requirement.txt\n",
+    "        # Timeout: 300\n",
+    "        # Memory: 512\n",
+    "        # Also have iam_policies_content (or path if needed)\n",
+    "\n",
+    "        # put_role_policy(self, role_name: str, policy_name: str, policy_document: str)\n",
+    "        # create_role(self, role_name: str, policy: str, trust_policy: dict)\n",
+    "        \n",
+    "        # Get the parent directory of the app file\n",
+    "        # parent_directory = os.path.dirname(app_file_path)\n",
+    "        # # print(f'Parent directory: {parent_directory}')\n",
+    "\n",
+    "        # config.workflow_name = function_name\n",
+    "        # config.workflow_version = \"1.0.0\"\n",
+    "        # zip_path = deployment_packager._create_deployment_package(parent_directory, \"python3.8\")\n",
+    "        # print(f'Zip path: {zip_path}')\n",
+    "\n",
+    "        # with open(zip_path, 'rb') as f:\n",
+    "        #     zip_contents = f.read()\n",
+    "    \n",
+    "        # function_arn = client.create_function(\n",
+    "        #     function_name = function_name,\n",
+    "        #     role_identifier = policy_arn,\n",
+    "        #     zip_contents = zip_contents,\n",
+    "        #     runtime = runtime,\n",
+    "        #     handler =  handler,\n",
+    "        #     environment_variables = {},\n",
+    "        #     timeout = timeout,\n",
+    "        #     memory_size = memory\n",
+    "        # )\n",
+    "\n",
+    "        # print(f'Timeout: {}')\n",
+    "        # print(f'Memory: {memory}')\n",
+    "        function_arn = client.get_lambda_function(function_name)['FunctionArn']\n",
+    "        # print(function_arn)\n",
+    "        sns_topic_name = f'{function_name}-sns_topic'\n",
+    "\n",
+    "        # print(f'Function ARN: {function_arn}')\n",
+    "        sns_topic_arn = client.create_sns_topic(sns_topic_name)\n",
+    "\n",
+    "        print(f'SNS Topic ARN: {sns_topic_arn}')\n",
+    "\n",
+    "        protocol = \"lambda\"\n",
+    "        subscriptionArn = client.subscribe_sns_topic(sns_topic_arn, protocol, function_arn)\n",
+    "        print(f'Subscription ARN: {subscriptionArn}')\n",
+    "\n",
+    "        break\n",
+    "\n",
     "\n",
     "        # # Create the new function and iam policy\n",
     "        # print(f'Creating new lambda function: {function_name}')\n",
@@ -180,7 +386,6 @@
     "\n",
     "\n",
     "        # # print(inner_files_dict, inner_directories_dict)\n",
-    "        \n",
     "\n",
     "\n",
     "    # Step 4: Create a zip file of the contents of the code and the requirements\n",
