extended deployment to work with sns. Also added .gitignore on many files

--- a/benchmarks/experiments/wrapper_overhead/setup.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/setup.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "from benchmarks.experiments.wrapper_overhead.common.deployment_utility import WrapperOverheadDeploymentUtility\n",
-    "from benchmarks.experiments.wrapper_overhead.common.file_utility import FileUtility\n",
+    "from benchmarks.experiments.wrapper_overhead.common.common_utility import CommonUtility\n",
     "from benchmarks.experiments.wrapper_overhead.common.extended_aws_remote_client import ExtendedAWSRemoteClient\n",
     "from multi_x_serverless.deployment.common.deploy.models.resource import Resource\n",
     "\n",
@@ -51,7 +51,7 @@
     "runtime = \"python3.8\"\n",
     "region = 'us-east-2'\n",
     "client: ExtendedAWSRemoteClient = ExtendedAWSRemoteClient(region)\n",
-    "file_utility: FileUtility = FileUtility()\n",
+    "file_utility: CommonUtility = CommonUtility()\n",
     "\n",
     "deployment_utility: WrapperOverheadDeploymentUtility = WrapperOverheadDeploymentUtility(region)\n",
     "config: MagicMock = MagicMock()\n",
