--- a/benchmarks/experiments/wrapper_overhead/setup.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/setup.ipynb
@@ -20,8 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from benchmarks.experiments.wrapper_overhead.common.deployment_utility import WrapperOverheadDeploymentUtility\n",
-    "from benchmarks.experiments.wrapper_overhead.common.extended_aws_remote_client import ExtendedAWSRemoteClient"
+    "from benchmarks.experiments.wrapper_overhead.common.deployment_utility import WrapperOverheadDeploymentUtility"
    ]
   },
   {
@@ -38,7 +37,6 @@
    "outputs": [],
    "source": [
     "region = 'us-east-2'\n",
-    "client: ExtendedAWSRemoteClient = ExtendedAWSRemoteClient(region)\n",
     "deployment_utility: WrapperOverheadDeploymentUtility = WrapperOverheadDeploymentUtility(region)"
    ]
   },
@@ -60,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- For MultiX, please set it up according to readme contained in the file. \"./dna_visualization/external_database/multi_x\""
+    "#### Boto3 Direct Calls"
    ]
   },
   {
@@ -70,12 +68,55 @@
    "outputs": [],
    "source": [
     "dna_vis_direct_calls_dir = \"./dna_visualization/external_database/boto3_only_direct_calls\" # Boto3 only direct calls\n",
+    "deployment_utility.deploy_experiment(dna_vis_direct_calls_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Boto3 SNS calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dna_vis_sns_calls_dir = \"./dna_visualization/external_database/boto3_only_sns\" # Boto3 only sns calls\n",
+    "deployment_utility.deploy_experiment(dna_vis_sns_calls_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### AWS Step Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dna_vis_aws_step_functions_dir = \"./dna_visualization/external_database/aws_step_function\" # AWS Step Functions\n",
-    "\n",
-    "deployment_utility.deploy_experiment(dna_vis_direct_calls_dir)\n",
-    "deployment_utility.deploy_experiment(dna_vis_sns_calls_dir)\n",
     "deployment_utility.deploy_experiment(dna_vis_aws_step_functions_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Multi-X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- For MultiX, please set it up according to readme contained in the file. \"./dna_visualization/external_database/multi_x\""
    ]
   }
  ],
