Resolved issue with direct call benchmark

--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "dna_vis_sns_calls_dir = \"./dna_visualization/external_database/boto3_only_sns\" # Boto3 only sns calls\n",
-    "# run_utility.run_experiment(dna_vis_direct_calls_dir, payload, times)"
+    "run_utility.run_experiment(dna_vis_direct_calls_dir, payload, times)"
    ]
   },
   {
