more scripts on running sns

--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,12 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dna_vis_direct_calls_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m dna_vis_sns_calls_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./dna_visualization/external_database/boto3_only_sns\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;66;03m# Boto3 only sns calls\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m run_utility\u001b[38;5;241m.\u001b[39mrun_experiment(\u001b[43mdna_vis_direct_calls_dir\u001b[49m, payload, times)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dna_vis_direct_calls_dir' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dna_vis_sns_calls_dir = \"./dna_visualization/external_database/boto3_only_sns\" # Boto3 only sns calls\n",
-    "run_utility.run_experiment(dna_vis_direct_calls_dir, payload, times)"
+    "run_utility.run_experiment(dna_vis_sns_calls_dir, payload, times)"
    ]
   },
   {
